making some changes on UI

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>StarbucksRewardsClone</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://db.onlinewebfonts.com/c/d7e8a95865396cddca89b00080d2cba6?family=SoDo+Sans+SemiBold" rel="stylesheet"> 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
